tests/baselines/reference/indexer2A.errors.txt
==== tests/cases/compiler/indexer2A.ts (4 errors) ====
    class IHeapObjectProperty { }
    class IDirectChildrenMap {
        // Decided to enforce a semicolon after declarations
        hasOwnProperty(objectId: number): boolean
        [objectId: number]: IHeapObjectProperty[]
         ~~~~~~~~
!!! indexer2A.ts(5,6): error TS1005: ']' expected.
                         ~
!!! indexer2A.ts(5,22): error TS1005: ';' expected.
                          ~
!!! indexer2A.ts(5,23): error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
                                               ~
!!! indexer2A.ts(5,44): error TS1005: '=' expected.
    }
    var directChildrenMap = <IDirectChildrenMap>{}; 